--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -5,7 +5,7 @@
 }
 
 #geodir-wrapper {
-    padding: 0 15px 80px;
+    padding: 80px 15px 40px;
     margin-right: auto;
     margin-left: auto;
     @media (min-width: 768px) {
